
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
typedef int u_int32_t ;
typedef int u_int ;
typedef int u_char ;
struct arphdr {int ar_hln; int ar_pln; void* ar_op; void* ar_pro; void* ar_hrd; } ;


 int ARPHRD_ETHER ;
 int ETHADDR_SIZE ;
 int ETHTYPE_IP ;
 void* htons (int ) ;
 int memcpy (int *,int *,int) ;

int build_arp_hdr(u_char *hdst,u_int32_t pdst,u_char* hsrc,u_int32_t psrc,u_short arpop,u_char* dstbuff){
  struct arphdr* hdr= (struct arphdr*)dstbuff;
  u_int off;

 hdr->ar_hrd=htons(ARPHRD_ETHER);
   hdr->ar_pro=htons(ETHTYPE_IP);
   hdr->ar_hln=ETHADDR_SIZE;
   hdr->ar_pln=4;
   hdr->ar_op=htons(arpop);

   off=8;

   memcpy(dstbuff + off,hsrc,ETHADDR_SIZE);
 off+=ETHADDR_SIZE;

 memcpy(dstbuff + off,(u_char*)&psrc,4);
 off+=4,

   memcpy(dstbuff + off,hdst,ETHADDR_SIZE);
   off+=ETHADDR_SIZE;

 memcpy(dstbuff + off,(u_char*)&pdst,4);

   return 1;
}
