; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_build_arp_hdr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_build_arp_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arphdr = type { i32, i32, i8*, i8*, i8* }

@ARPHRD_ETHER = common dso_local global i32 0, align 4
@ETHTYPE_IP = common dso_local global i32 0, align 4
@ETHADDR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @build_arp_hdr(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca %struct.arphdr*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = bitcast i32* %15 to %struct.arphdr*
  store %struct.arphdr* %16, %struct.arphdr** %13, align 8
  %17 = load i32, i32* @ARPHRD_ETHER, align 4
  %18 = call i8* @htons(i32 %17)
  %19 = load %struct.arphdr*, %struct.arphdr** %13, align 8
  %20 = getelementptr inbounds %struct.arphdr, %struct.arphdr* %19, i32 0, i32 4
  store i8* %18, i8** %20, align 8
  %21 = load i32, i32* @ETHTYPE_IP, align 4
  %22 = call i8* @htons(i32 %21)
  %23 = load %struct.arphdr*, %struct.arphdr** %13, align 8
  %24 = getelementptr inbounds %struct.arphdr, %struct.arphdr* %23, i32 0, i32 3
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* @ETHADDR_SIZE, align 4
  %26 = load %struct.arphdr*, %struct.arphdr** %13, align 8
  %27 = getelementptr inbounds %struct.arphdr, %struct.arphdr* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  %28 = load %struct.arphdr*, %struct.arphdr** %13, align 8
  %29 = getelementptr inbounds %struct.arphdr, %struct.arphdr* %28, i32 0, i32 1
  store i32 4, i32* %29, align 4
  %30 = load i32, i32* %11, align 4
  %31 = call i8* @htons(i32 %30)
  %32 = load %struct.arphdr*, %struct.arphdr** %13, align 8
  %33 = getelementptr inbounds %struct.arphdr, %struct.arphdr* %32, i32 0, i32 2
  store i8* %31, i8** %33, align 8
  store i32 8, i32* %14, align 4
  %34 = load i32*, i32** %12, align 8
  %35 = load i32, i32* %14, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  %38 = load i32*, i32** %9, align 8
  %39 = load i32, i32* @ETHADDR_SIZE, align 4
  %40 = call i32 @memcpy(i32* %37, i32* %38, i32 %39)
  %41 = load i32, i32* @ETHADDR_SIZE, align 4
  %42 = load i32, i32* %14, align 4
  %43 = add nsw i32 %42, %41
  store i32 %43, i32* %14, align 4
  %44 = load i32*, i32** %12, align 8
  %45 = load i32, i32* %14, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = call i32 @memcpy(i32* %47, i32* %10, i32 4)
  %49 = load i32, i32* %14, align 4
  %50 = add nsw i32 %49, 4
  store i32 %50, i32* %14, align 4
  %51 = load i32*, i32** %12, align 8
  %52 = load i32, i32* %14, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %51, i64 %53
  %55 = load i32*, i32** %7, align 8
  %56 = load i32, i32* @ETHADDR_SIZE, align 4
  %57 = call i32 @memcpy(i32* %54, i32* %55, i32 %56)
  %58 = load i32, i32* @ETHADDR_SIZE, align 4
  %59 = load i32, i32* %14, align 4
  %60 = add nsw i32 %59, %58
  store i32 %60, i32* %14, align 4
  %61 = load i32*, i32** %12, align 8
  %62 = load i32, i32* %14, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %61, i64 %63
  %65 = call i32 @memcpy(i32* %64, i32* %8, i32 4)
  ret i32 1
}

declare dso_local i8* @htons(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
